chandeliers-lus/tests/compile_fail/ui/tc/tuples.stderr
error: Type mismatch between the left and right sides: Base types should be unifiable: expected int, got float
  --> tests/compile_fail/ui/tc/tuples.rs:13:9
   |
13 |         (a, b, c) = gen();
   |         ^^^^^^^^^^^^^^^^^
   |
note: This element has type int
  --> tests/compile_fail/ui/tc/tuples.rs:13:13
   |
13 |         (a, b, c) = gen();
   |             ^
note: While this element has type float
  --> tests/compile_fail/ui/tc/tuples.rs:3:38
   |
3  |     node gen() returns (a : int; b : float; c : bool);
   |                                      ^^^^^

error: Type mismatch between the left and right sides: Base types should be unifiable: expected int, got bool
  --> tests/compile_fail/ui/tc/tuples.rs:13:9
   |
13 |         (a, b, c) = gen();
   |         ^^^^^^^^^^^^^^^^^
   |
note: This element has type int
  --> tests/compile_fail/ui/tc/tuples.rs:13:16
   |
13 |         (a, b, c) = gen();
   |                ^
note: While this element has type bool
  --> tests/compile_fail/ui/tc/tuples.rs:3:49
   |
3  |     node gen() returns (a : int; b : float; c : bool);
   |                                                 ^^^^
